--- a/css/styles.css
+++ b/css/styles.css
@@ -203,6 +203,8 @@ img {
     padding: 16px 32px;
     border: none;
     border-radius: 4px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover,
@@ -261,6 +263,15 @@ img {
     background-color: #4D5AE5;
     border-radius: 50%;
     margin-bottom: 32px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-link:hover {
+    background-color: #404bbf;
+}
+
+.footer-icon-link:hover {
+    background-color: #31d0aa;
 }
 
 .icon-svg {
@@ -346,6 +357,31 @@ img {
 
 .portfolio-item {
     width: calc((100% - 24px * 2) / 3);
+    /* position: relative; */
+}
+.portfolio-item:hover .portfolio-overlay {
+    transform: translateY(0);
+}
+
+.portfolio-thumb {
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 40px 32px;
+    height: 100%;
+    background-color: #4D5AE5;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-card {
@@ -353,6 +389,7 @@ img {
     border: 1px solid #e7e9fc;
     border-top: none;
 }
+
 
 /* --------- Footer --------- */
 .footer {
