--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,7 @@ img {
 .nav-item {}
 
 .nav-link {
+    position: relative;
     padding: 24px 0;
     display: block;
     font-weight: 500;
@@ -113,11 +114,11 @@ img {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-link.current {
+/* .nav-link.current {
     position: relative;
-}
+} */
 
-.nav-link.current::after {
+.nav-link::after {
     content: '';
     position: absolute;
     left: 0;
@@ -126,6 +127,14 @@ img {
     height: 4px;
     background-color: #404bbf;
     border-radius: 2px;
+    opacity: 0;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-link:hover::after,
+.nav-link:focus::after,
+.nav-link.current::after {
+    opacity: 1;
 }
 
 .address {
@@ -266,11 +275,13 @@ img {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icon-link:hover {
+.icon-link:hover,
+.icon-link:focus {
     background-color: #404bbf;
 }
 
-.footer-icon-link:hover {
+.footer-icon-link:hover,
+.footer-icon-link:focus {
     background-color: #31d0aa;
 }
 
@@ -359,6 +370,7 @@ img {
     width: calc((100% - 24px * 2) / 3);
     /* position: relative; */
 }
+
 .portfolio-item:hover .portfolio-overlay {
     transform: translateY(0);
 }
