--- a/css/styles.css
+++ b/css/styles.css
@@ -317,6 +317,7 @@ img {
     background-color: #FFFFFF;
     border-radius: 0 0 4px 4px;
     width: calc((100% - 3 * 24px) / 4);
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .team-card {
@@ -368,11 +369,17 @@ img {
 
 .portfolio-item {
     width: calc((100% - 24px * 2) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
     /* position: relative; */
+}
+.portfolio-item:hover {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+
 }
 
 .portfolio-item:hover .portfolio-overlay {
-    transform: translateY(0);
+    transform: translateY(0);    
 }
 
 .portfolio-thumb {
