--- a/css/styles.css
+++ b/css/styles.css
@@ -419,7 +419,7 @@ img {
 
 .footer-container {
     display: flex;
-    gap: 120px;
+    align-items: baseline    
 }
 
 .footer-text {
@@ -437,7 +437,9 @@ img {
 
 .social-container {}
 
-.logo-container {}
+.logo-container {
+    margin-right: 120px;
+}
 
 .footer-social {
     font-weight: 500;
