correction in footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -419,7 +419,7 @@ img {
 
 .footer-container {
     display: flex;
-    align-items: baseline    
+    align-items: baseline;    
 }
 
 .footer-text {
