--- a/css/styles.css
+++ b/css/styles.css
@@ -261,14 +261,17 @@ img {
     gap: 16px;
 }
 
-.icon-item {}
+.icon-item {    
+    width: 40px;
+    height: 40px;
+}
 
 .icon-link {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 40px;
-    height: 40px;
+    width: 100%;
+    height: 100%;   
     background-color: #4D5AE5;
     border-radius: 50%;
     margin-bottom: 32px;
@@ -370,16 +373,17 @@ img {
 .portfolio-item {
     width: calc((100% - 24px * 2) / 3);
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
+
     /* position: relative; */
 }
+
 .portfolio-item:hover {
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 
 }
 
 .portfolio-item:hover .portfolio-overlay {
-    transform: translateY(0);    
+    transform: translateY(0);
 }
 
 .portfolio-thumb {
@@ -419,7 +423,7 @@ img {
 
 .footer-container {
     display: flex;
-    align-items: baseline;    
+    align-items: baseline;
 }
 
 .footer-text {
